tablet nav fix, spacing fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -298,7 +298,7 @@ li.timeline-item::before {
     }
 }
 
-@media (max-width:767px) {
+@media (max-width:768px) {
     header {
       background-color: #212529;
     }
